[package]
name = "slack_rs"
version = "0.1.0"
edition = "2021"
description = "A user-friendly Slack SDK implementation using slack-morphism-rust"

[dependencies]
slack-morphism = { version = "2.8.0", features = ["hyper", "axum"] }
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.6", features = ["http1", "macros"] }
hyper = { version = "1.0", features = ["full"] }
hyper-rustls = { version = "0.27.5" }
hyper-util = { version = "0.1", features = ["client", "http1", "http2"] }
tower = "0.4"
tower-http = "0.4"
http = "0.2"
tracing = "0.1.40"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5.0"
async-trait = "0.1"
rvstruct = "0.3.2"
yoke = "0.7.5"

[dev-dependencies]
dotenvy = "0.15"
ngrok = { version = "0.13", features = ["axum"] }
anyhow = "1.0"

[features]
default = ["socket_mode", "message", "events"]
socket_mode = ["slack-morphism/axum"]
events = []
oauth = []
message = []

[[example]]
name = "mention_response"
path = "examples/mention_response_example.rs"
required-features = ["events"]
